--- a/quill.core.css
+++ b/quill.core.css
@@ -1,5 +1,5 @@
 /*!
- * Quill Editor v1.3.5
+ * Quill Editor v1.0.0
  * https://quilljs.com/
  * Copyright (c) 2014, Jason Chen
  * Copyright (c) 2013, salesforce.com
@@ -11,12 +11,6 @@
   height: 100%;
   margin: 0px;
   position: relative;
-}
-.ql-container.ql-disabled .ql-tooltip {
-  visibility: hidden;
-}
-.ql-container.ql-disabled .ql-editor ul[data-checked] > li::before {
-  pointer-events: none;
 }
 .ql-clipboard {
   left: -100000px;
@@ -31,6 +25,7 @@
 }
 .ql-editor {
   box-sizing: border-box;
+  cursor: text;
   line-height: 1.42;
   height: 100%;
   outline: none;
@@ -41,9 +36,6 @@
   text-align: left;
   white-space: pre-wrap;
   word-wrap: break-word;
-}
-.ql-editor > * {
-  cursor: text;
 }
 .ql-editor p,
 .ql-editor ol,
@@ -69,56 +61,28 @@
   list-style-type: none;
 }
 .ql-editor ul > li::before {
-  content: '\2022';
-}
-.ql-editor ul[data-checked=true],
-.ql-editor ul[data-checked=false] {
-  pointer-events: none;
-}
-.ql-editor ul[data-checked=true] > li *,
-.ql-editor ul[data-checked=false] > li * {
-  pointer-events: all;
-}
-.ql-editor ul[data-checked=true] > li::before,
-.ql-editor ul[data-checked=false] > li::before {
-  color: #777;
-  cursor: pointer;
-  pointer-events: all;
-}
-.ql-editor ul[data-checked=true] > li::before {
-  content: '\2611';
-}
-.ql-editor ul[data-checked=false] > li::before {
-  content: '\2610';
+  content: '\25CF';
 }
 .ql-editor li::before {
   display: inline-block;
+  margin-right: 0.3em;
+  text-align: right;
   white-space: nowrap;
   width: 1.2em;
 }
 .ql-editor li:not(.ql-direction-rtl)::before {
   margin-left: -1.5em;
-  margin-right: 0.3em;
-  text-align: right;
 }
-.ql-editor li.ql-direction-rtl::before {
-  margin-left: 0.3em;
-  margin-right: -1.5em;
-}
-.ql-editor ol li:not(.ql-direction-rtl),
-.ql-editor ul li:not(.ql-direction-rtl) {
+.ql-editor ol li,
+.ql-editor ul li {
   padding-left: 1.5em;
-}
-.ql-editor ol li.ql-direction-rtl,
-.ql-editor ul li.ql-direction-rtl {
-  padding-right: 1.5em;
 }
 .ql-editor ol li {
   counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
-  counter-increment: list-0;
+  counter-increment: list-num;
 }
 .ql-editor ol li:before {
-  content: counter(list-0, decimal) '. ';
+  content: counter(list-num, decimal) '. ';
 }
 .ql-editor ol li.ql-indent-1 {
   counter-increment: list-1;
@@ -390,8 +354,6 @@
   color: rgba(0,0,0,0.6);
   content: attr(data-placeholder);
   font-style: italic;
-  left: 15px;
   pointer-events: none;
   position: absolute;
-  right: 15px;
 }
