--- a/css/quill.bubble.css
+++ b/css/quill.bubble.css
@@ -6,8 +6,8 @@
  */
 .ql-container {
   box-sizing: border-box;
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  /* font-family: Helvetica, Arial, sans-serif; */
+  /* font-size: 13px; */
   height: 100%;
   margin: 0px;
   position: relative;
@@ -609,9 +609,9 @@
 .ql-bubble .ql-editor h6 {
   font-size: 0.67em;
 }
-.ql-bubble .ql-editor a {
+/* .ql-bubble .ql-editor a {
   text-decoration: underline;
-}
+} */
 .ql-bubble .ql-editor blockquote {
   border-left: 4px solid #ccc;
   margin-bottom: 5px;
