--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,8 @@
   color: #111;
   letter-spacing: 1em;
   text-align: center;
+  margin-bottom:1.4em;
+  margin-top:1.4em
 }
 #editor-container hr:before {
   content: '...';
