--- a/css/wysiwyg.css
+++ b/css/wysiwyg.css
@@ -65,13 +65,13 @@
   margin-top:0
 }
 .wysiwyg h1{
-  font-size:2.4em;
+  /* font-size:2.4em; */
   margin-bottom:.58333em;
   margin-top:.58333em;
   /* line-height:1 */
 }
 .wysiwyg h2{
-  font-size:1.6em;
+  /* font-size:1.6em; */
   margin-bottom:.875em;
   margin-top:1.75em;
   line-height:1.1
