--- a/css/quill.bubble.css
+++ b/css/quill.bubble.css
@@ -6,8 +6,8 @@
  */
 .ql-container {
   box-sizing: border-box;
-  /* font-family: Helvetica, Arial, sans-serif; */
-  /* font-size: 13px; */
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 13px;
   height: 100%;
   margin: 0px;
   position: relative;
@@ -15,9 +15,9 @@
 .ql-container.ql-disabled .ql-tooltip {
   visibility: hidden;
 }
-.ql-container.ql-disabled .ql-editor ul[data-checked] > li::before {
+/* .ql-container.ql-disabled .ql-editor ul[data-checked] > li::before {
   pointer-events: none;
-}
+} */
 .ql-clipboard {
   left: -100000px;
   height: 1px;
@@ -29,7 +29,7 @@
   margin: 0;
   padding: 0;
 }
-.ql-editor {
+/* .ql-editor {
   box-sizing: border-box;
   line-height: 1.42;
   height: 100%;
@@ -394,7 +394,7 @@
   pointer-events: none;
   position: absolute;
   right: 15px;
-}
+} */
 .ql-bubble.ql-toolbar:after,
 .ql-bubble .ql-toolbar:after {
   clear: both;
@@ -591,11 +591,11 @@
 .ql-bubble .ql-direction.ql-active svg:first-child {
   display: none;
 }
-.ql-bubble .ql-editor h1 {
-  font-size: 1.7em;
+/* .ql-bubble .ql-editor h1 {
+  font-size: 2em;
 }
 .ql-bubble .ql-editor h2 {
-  font-size: 1.3em;
+  font-size: 1.5em;
 }
 .ql-bubble .ql-editor h3 {
   font-size: 1.17em;
@@ -609,9 +609,9 @@
 .ql-bubble .ql-editor h6 {
   font-size: 0.67em;
 }
-/* .ql-bubble .ql-editor a {
+.ql-bubble .ql-editor a {
   text-decoration: underline;
-} */
+}
 .ql-bubble .ql-editor blockquote {
   border-left: 4px solid #ccc;
   margin-bottom: 5px;
@@ -640,7 +640,7 @@
 }
 .ql-bubble .ql-editor img {
   max-width: 100%;
-}
+} */
 .ql-bubble .ql-picker {
   color: #ccc;
   display: inline-block;
