--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,20 @@
 .ql-bubble .ql-tooltip {
   border-radius: 5px !important;
 }
+div.object-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  height: auto;
+}
+div.object-wrapper iframe,
+div.object-wrapper object,
+div.object-wrapper embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
