--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 .ql-editor {
   outline: none;
 }
-.ql-editor [data-placeholder].embed-area{
-  position:relative
+.ql-editor [data-placeholder].embed-area {
+  position:relative;
 }
-.ql-editor [data-placeholder].embed-area:before{
+.ql-editor [data-placeholder].embed-area:before {
   position:absolute;
   left:0;
   right:0;
@@ -15,6 +15,16 @@
   text-overflow:ellipsis;
   overflow:hidden;
   pointer-events:none
+}
+.ql-editor figcaption:empty:not(:focus)::before {
+  content: 'Judul (opsional)';
+  color:rgba(0,0,0,.44);
+  font-weight:400;
+  white-space:nowrap;
+  text-overflow:ellipsis;
+  overflow:hidden;
+  pointer-events:none;
+  font-family: CustomSansSerif, 'Lucida Grande', Arial, sans-serif;
 }
 /* Sidebar controls */
 #sidebar-controls {
@@ -54,7 +64,7 @@
 .ql-bubble .ql-tooltip {
   border-radius: 5px !important;
 }
-div.object-wrapper {
+.object-wrapper {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
@@ -62,12 +72,15 @@ div.object-wrapper {
   max-width: 100%;
   height: auto;
 }
-div.object-wrapper iframe,
-div.object-wrapper object,
-div.object-wrapper embed {
+.object-wrapper iframe,
+.object-wrapper object,
+.object-wrapper embed {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+.wysiwyg figure {
+  margin: 0 !important;
 }
