--- a/style.css
+++ b/style.css
@@ -74,3 +74,33 @@
 .wysiwyg hr:before {
   content: '...';
 }
+.object-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  height: auto;
+}
+.object-wrapper iframe,
+.object-wrapper object,
+.object-wrapper embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.wysiwyg figure {
+  margin: 0 !important;
+}
+.wysiwyg figcaption:empty:not(:focus)::before {
+  content: 'Judul (opsional)';
+  color:rgba(0,0,0,.44);
+  font-weight:400;
+  white-space:nowrap;
+  text-overflow:ellipsis;
+  overflow:hidden;
+  pointer-events:none;
+  font-family: CustomSansSerif, 'Lucida Grande', Arial, sans-serif;
+}
