fix figcaption placeholder

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
   pointer-events:none
 }
 .ql-editor figcaption:empty:not(:focus)::before {
-  content: 'Judul (opsional)';
+  content:attr(data-placeholder);
   color:rgba(0,0,0,.44);
   font-weight:400;
   white-space:nowrap;
