--- a/view-mode/style.css
+++ b/view-mode/style.css
@@ -95,16 +95,16 @@
   margin: 0 !important;
 }
 .wysiwyg figcaption {
-  font-size: .7em !important;
-  text-align: left;
-}
-.wysiwyg figcaption:empty:not(:focus)::before {
-  content:attr(data-placeholder);
+  outline: none;
+  font-family: CustomSansSerif, 'Lucida Grande', Arial, sans-serif;
   color:rgba(0,0,0,.44);
   font-weight:400;
   white-space:nowrap;
   text-overflow:ellipsis;
   overflow:hidden;
-  pointer-events:none;
-  font-family: CustomSansSerif, 'Lucida Grande', Arial, sans-serif;
+  text-align: left;
+  font-size: .7em;
+}
+.wysiwyg figcaption:empty:not(:focus)::before {
+  content:attr(data-placeholder);
 }
