--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   overflow:hidden;
   pointer-events:none
 }
-.ql-editor .object-wrapper {
+.ql-editor .video-wrapper {
   position: relative;
   padding-bottom: 56.25%;
   height: 0;
@@ -24,9 +24,17 @@
   max-width: 100%;
   height: auto;
 }
-.ql-editor .object-wrapper iframe,
-.ql-editor .object-wrapper object,
-.ql-editor .object-wrapper embed {
+.ql-editor .rich-wrapper {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  max-height: 100%;
+  width: auto;
+}
+.ql-editor .video-wrapper iframe,
+.ql-editor .video-wrapper object,
+.ql-editor .video-wrapper embed,
+.ql-editor .rich-wrapper iframe {
   position: absolute;
   top: 0;
   left: 0;
