add iframe resizer dll

--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,19 @@
   padding-bottom: 56.25%;
   height: 0;
   overflow: hidden;
-  max-width: 100%;
-  height: auto;
 }
 .ql-editor .video-wrapper iframe,
 .ql-editor .video-wrapper object,
-.ql-editor .video-wrapper embed{
+.ql-editor .video-wrapper embed {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+.ql-editor iframe.rich {
+  width: 1px;
+  min-width: 100%;
 }
 .ql-editor figure {
   margin: 0 !important;
