fix embed youtube, vimeo, twitter, and image

--- a/css/style.css
+++ b/css/style.css
@@ -16,30 +16,25 @@
   overflow:hidden;
   pointer-events:none
 }
-.ql-editor .video-wrapper {
+.ql-editor .figure-wrapper {
   position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
 }
-.ql-editor .video-wrapper iframe,
-.ql-editor .video-wrapper object,
-.ql-editor .video-wrapper embed {
+.ql-editor .figure-wrapper img {
+  max-width: 680px;
+}
+.ql-editor .figure-wrapper .iframe-wrapper {
+  max-width: 100%;
+  vertical-align: top;
+  position: relative;
+}
+.ql-editor .figure-wrapper .iframe-wrapper iframe {
   position: absolute;
+  width: 1px;
+  height: 1px;
+  min-width: 100%;
+  min-height: 100%;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-}
-.ql-editor iframe.rich {
-  width: 1px;
-  min-width: 100%;
-}
-.ql-editor figure {
-  margin: 0 !important;
-}
-.ql-editor figure:focus {
-  border: 2px solid #ccc;
 }
 /* Sidebar controls */
 #sidebar-controls {
