--- a/css/wysiwyg-custom.css
+++ b/css/wysiwyg-custom.css
@@ -60,6 +60,10 @@
   font-style: italic;
   margin-left: -1.2em;
 }
+.wysiwyg figure {
+  margin-left: 0;
+  margin-right: 0;
+}
 .wysiwyg figcaption {
   outline: none;
   font-family: CustomSansSerif, 'Lucida Grande', Arial, sans-serif;
