--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,25 @@
 }
 .ql-bubble.ql-toolbar button, .ql-bubble .ql-toolbar button {
   color: #fff;
+  height: 32px;
+  width: 31px;
+  padding: 10px 7px;
+  margin: 1px;
+  border-radius: 2px;
+  transition: opacity .2s ease,transform .2s ease,background-color .2s ease;
+}
+.ql-bubble.ql-toolbar button, .ql-bubble .ql-toolbar button.ql-active {
+  background-color: #00B271 !important;
 }
 .ql-bubble .ql-tooltip {
-  border-radius: 5px !important;
+  border-radius: 3px !important;
+}
+.ql-bubble .ql-toolbar .ql-formats:first-child {
+  margin-left: 7px;
+}
+.ql-bubble .ql-toolbar .ql-formats:last-child {
+  margin-right: 7px;
+}
+.ql-bubble .ql-toolbar .ql-formats {
+  margin: 6px 12px 6px 0px;
 }
